# DiagnosticGUI

./: .gitignore  CMakeLists.txt  diagnostic.files
.cmake/api/v1/reply/: cmakeFiles-v1-eff368110a2f5f59535a.json  codemodel-v2-904a0bb92dae001466c8.json  directory-.-Debug-b15f958ad7122366444b.json  index-2025-03-13T06-06-48-0791.json  target-diagnostic-Debug-5ba5e7ec6b08e1e15412.json
extras/: BuildingLaptop.txt
src/: MultiThreadWatchdog.h  main.cpp  main.h  thread.cpp  thread.h
